// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignInFactorOneCodeForm snapshots > renders email code card 1`] = `
<div>
  <div
    class="cl-cardBox 🔒️ css-lesbzj"
  >
    <div
      class="cl-card 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.emailCode.title"
          >
            Check your email
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.emailCode.subtitle"
            data-variant="body"
          >
            to continue to TestApp
          </p>
          <div
            class="cl-identityPreview 🔒️ css-1389xgv"
          >
            <p
              class="cl-identityPreviewText 🔒️ css-j1oc9"
              data-color="secondary"
              data-variant="body"
            >
              user@example.com
            </p>
            <button
              aria-label="Edit"
              class="cl-identityPreviewEditButton cl-button 🔒️ css-xn52nr"
              data-color="primary"
              data-variant="link"
            >
              <span
                class="cl-identityPreviewEditButtonIcon 🔒️ css-1ctxcx1-Icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-ji79b9"
      >
        <div
          class="cl-form 🔒️ css-2l8bgd"
        >
          <div
            class="cl-otpCodeField 🔒️ css-1ugvctd"
          >
            <div
              class="cl-otpCodeFieldInputContainer 🔒️ css-1quu1j7"
            >
              <noscript />
              <div
                data-input-otp-container="true"
                style="position: relative; cursor: text; user-select: none; pointer-events: none; --root-height: 0px;"
              >
                <div
                  class="cl-otpCodeFieldInputs 🔒️ css-1erfakr"
                  role="group"
                >
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-oo2m5"
                    data-feedback="info"
                    data-focus-within="true"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  >
                    <style>
                      
        @keyframes caret-blink-animation {
          0%, 50% {
            opacity: 1;
          }
          51%, 100% {
            opacity: 0;
          }
        }
      
                    </style>
                    <div
                      class="css-1qlrn70"
                    >
                      <div
                        class="css-31k80"
                      />
                    </div>
                  </div>
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                </div>
                <div
                  style="position: absolute; inset: 0; pointer-events: none;"
                >
                  <input
                    aria-label="Enter verification code"
                    aria-required="true"
                    autocomplete="one-time-code"
                    data-input-otp="true"
                    data-input-otp-mse="0"
                    data-input-otp-mss="0"
                    data-input-otp-placeholder-shown="true"
                    inputmode="numeric"
                    maxlength="6"
                    pattern="^\\d+$"
                    style="position: absolute; inset: 0; width: 100%; height: 100%; display: flex; text-align: center; opacity: 1; color: transparent; pointer-events: all; background: transparent; caret-color: transparent; border: 0px solid transparent; outline: 0 solid transparent; box-shadow: none; line-height: 1; letter-spacing: -.5em; font-size: var(--root-height); font-family: monospace; font-variant-numeric: tabular-nums;"
                    value=""
                  />
                </div>
              </div>
            </div>
            <span
              aria-atomic="true"
              aria-live="polite"
              class="css-5ur8x"
            />
            <div
              class="css-1vrundg"
              style="height: 0px; position: relative;"
            />
          </div>
          <button
            class="cl-formResendCodeLink cl-button 🔒️ css-xn52nr"
            data-color="primary"
            data-variant="link"
            disabled=""
          >
            Didn't receive a code? Resend
             (30)
          </button>
        </div>
        <div
          class="css-bails5"
        >
          <button
            class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
            data-color="primary"
            data-localization-key="formButtonPrimary"
            data-variant="solid"
          >
            <span
              class="css-2iusy0"
            >
              Continue
              <span
                class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInFactorOneCodeForm snapshots > renders phone code card 1`] = `
<div>
  <div
    class="cl-cardBox 🔒️ css-lesbzj"
  >
    <div
      class="cl-card 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.phoneCode.title"
          >
            Check your phone
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.phoneCode.subtitle"
            data-variant="body"
          >
            to continue to TestApp
          </p>
          <div
            class="cl-identityPreview 🔒️ css-1389xgv"
          >
            <p
              class="css-1i0al4w"
              data-color="inherit"
              data-variant="body"
            >
              🇺🇸
            </p>
            <p
              class="cl-identityPreviewText 🔒️ css-j1oc9"
              data-color="secondary"
              data-variant="body"
            >
              +1 (555) 123-4567
            </p>
            <button
              aria-label="Edit"
              class="cl-identityPreviewEditButton cl-button 🔒️ css-xn52nr"
              data-color="primary"
              data-variant="link"
            >
              <span
                class="cl-identityPreviewEditButtonIcon 🔒️ css-1ctxcx1-Icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-ji79b9"
      >
        <div
          class="cl-form 🔒️ css-2l8bgd"
        >
          <div
            class="cl-otpCodeField 🔒️ css-1ugvctd"
          >
            <div
              class="cl-otpCodeFieldInputContainer 🔒️ css-1quu1j7"
            >
              <noscript />
              <div
                data-input-otp-container="true"
                style="position: relative; cursor: text; user-select: none; pointer-events: none; --root-height: 0px;"
              >
                <div
                  class="cl-otpCodeFieldInputs 🔒️ css-1erfakr"
                  role="group"
                >
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-oo2m5"
                    data-feedback="info"
                    data-focus-within="true"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  >
                    <style>
                      
        @keyframes caret-blink-animation {
          0%, 50% {
            opacity: 1;
          }
          51%, 100% {
            opacity: 0;
          }
        }
      
                    </style>
                    <div
                      class="css-1qlrn70"
                    >
                      <div
                        class="css-31k80"
                      />
                    </div>
                  </div>
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                </div>
                <div
                  style="position: absolute; inset: 0; pointer-events: none;"
                >
                  <input
                    aria-label="Enter verification code"
                    aria-required="true"
                    autocomplete="one-time-code"
                    data-input-otp="true"
                    data-input-otp-mse="0"
                    data-input-otp-mss="0"
                    data-input-otp-placeholder-shown="true"
                    inputmode="numeric"
                    maxlength="6"
                    pattern="^\\d+$"
                    style="position: absolute; inset: 0; width: 100%; height: 100%; display: flex; text-align: center; opacity: 1; color: transparent; pointer-events: all; background: transparent; caret-color: transparent; border: 0px solid transparent; outline: 0 solid transparent; box-shadow: none; line-height: 1; letter-spacing: -.5em; font-size: var(--root-height); font-family: monospace; font-variant-numeric: tabular-nums;"
                    value=""
                  />
                </div>
              </div>
            </div>
            <span
              aria-atomic="true"
              aria-live="polite"
              class="css-5ur8x"
            />
            <div
              class="css-1vrundg"
              style="height: 0px; position: relative;"
            />
          </div>
          <button
            class="cl-formResendCodeLink cl-button 🔒️ css-xn52nr"
            data-color="primary"
            data-variant="link"
            disabled=""
          >
            Didn't receive a code? Resend
             (30)
          </button>
        </div>
        <div
          class="css-bails5"
        >
          <button
            class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
            data-color="primary"
            data-localization-key="formButtonPrimary"
            data-variant="solid"
          >
            <span
              class="css-2iusy0"
            >
              Continue
              <span
                class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInFactorOneCodeForm snapshots > renders with alternative methods 1`] = `
<div>
  <div
    class="cl-cardBox 🔒️ css-lesbzj"
  >
    <div
      class="cl-card 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.emailCode.title"
          >
            Check your email
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-qqe4hk"
            data-color="secondary"
            data-localization-key="signIn.emailCode.subtitle"
            data-variant="body"
          >
            to continue to TestApp
          </p>
          <div
            class="cl-identityPreview 🔒️ css-1389xgv"
          >
            <p
              class="cl-identityPreviewText 🔒️ css-j1oc9"
              data-color="secondary"
              data-variant="body"
            >
              user@example.com
            </p>
            <button
              aria-label="Edit"
              class="cl-identityPreviewEditButton cl-button 🔒️ css-xn52nr"
              data-color="primary"
              data-variant="link"
            >
              <span
                class="cl-identityPreviewEditButtonIcon 🔒️ css-1ctxcx1-Icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-ji79b9"
      >
        <div
          class="cl-form 🔒️ css-2l8bgd"
        >
          <div
            class="cl-otpCodeField 🔒️ css-1ugvctd"
          >
            <div
              class="cl-otpCodeFieldInputContainer 🔒️ css-1quu1j7"
            >
              <noscript />
              <div
                data-input-otp-container="true"
                style="position: relative; cursor: text; user-select: none; pointer-events: none; --root-height: 0px;"
              >
                <div
                  class="cl-otpCodeFieldInputs 🔒️ css-1erfakr"
                  role="group"
                >
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-oo2m5"
                    data-feedback="info"
                    data-focus-within="true"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  >
                    <style>
                      
        @keyframes caret-blink-animation {
          0%, 50% {
            opacity: 1;
          }
          51%, 100% {
            opacity: 0;
          }
        }
      
                    </style>
                    <div
                      class="css-1qlrn70"
                    >
                      <div
                        class="css-31k80"
                      />
                    </div>
                  </div>
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                  <div
                    aria-invalid="false"
                    class="cl-otpCodeFieldInput cl-input 🔒️ css-1sh4xr3"
                    data-feedback="info"
                    data-focus-within="false"
                    data-testid="otp-input-segment"
                    data-variant="default"
                  />
                </div>
                <div
                  style="position: absolute; inset: 0; pointer-events: none;"
                >
                  <input
                    aria-label="Enter verification code"
                    aria-required="true"
                    autocomplete="one-time-code"
                    data-input-otp="true"
                    data-input-otp-mse="0"
                    data-input-otp-mss="0"
                    data-input-otp-placeholder-shown="true"
                    inputmode="numeric"
                    maxlength="6"
                    pattern="^\\d+$"
                    style="position: absolute; inset: 0; width: 100%; height: 100%; display: flex; text-align: center; opacity: 1; color: transparent; pointer-events: all; background: transparent; caret-color: transparent; border: 0px solid transparent; outline: 0 solid transparent; box-shadow: none; line-height: 1; letter-spacing: -.5em; font-size: var(--root-height); font-family: monospace; font-variant-numeric: tabular-nums;"
                    value=""
                  />
                </div>
              </div>
            </div>
            <span
              aria-atomic="true"
              aria-live="polite"
              class="css-5ur8x"
            />
            <div
              class="css-1vrundg"
              style="height: 0px; position: relative;"
            />
          </div>
          <button
            class="cl-formResendCodeLink cl-button 🔒️ css-xn52nr"
            data-color="primary"
            data-variant="link"
            disabled=""
          >
            Didn't receive a code? Resend
             (30)
          </button>
        </div>
        <div
          class="css-bails5"
        >
          <button
            class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
            data-color="primary"
            data-localization-key="formButtonPrimary"
            data-variant="solid"
          >
            <span
              class="css-2iusy0"
            >
              Continue
              <span
                class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
              />
            </span>
          </button>
          <div
            class="cl-footerAction cl-footerAction__alternativeMethods 🔒️ css-h2zfvr"
          >
            <a
              class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
              data-localization-key="footerActionLink__useAnotherMethod"
              href="https://clerk.com/"
            >
              Use another method
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
